--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ a:visited  {
 }
 
  #screen{
-    background-color: #ececec;
+    background-color: #A9907E;
     border: 3px solid transparent;
     /* box-shadow: 3px 3px 3px 3px grey; */
     border-radius: 29px;
@@ -112,7 +112,7 @@ a:visited  {
 
 
 #clean {
-  background: #c4eded;
+  background: #753422;
 }
 
 
